<resources>
    <string name="app_name">DeTon</string>

    <string name="story_name">ĐẾ TÔN</string>
    <string name="story_author">Trạch Trư</string>
    <string name="story_type">Tiên hiệp; Huyền Huyễn</string>
    <string name="btn_listchap_text">Danh Sach Chương</string>
    <string name="btn_load_text">Tải Truyện</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="story_content">Giới thiệu truyện:
Ngươi càng mạnh, dã tâm cũng sẽ càng lớn, dã tâm đã lớn thì năng lực đồng dạng cũng phải lớn theo. Phải có những ham muốn to lớn thì ngươi mới có động lực để tiến lên, mới đạt được những thành tựu ngày càng cao hơn!

Võ đạo có thể Thông Thần!

Võ đạo tu luyện đến cảnh giới Thần Luân, liền có thể luyện thành Thần Thông, siêu phàm thoát tục!

Nhận xét:
Sau thành công của Độc Bộ Thiên Hạ và Dã Man Vương Tọa, Trạch Trư lại tiếp tục bộc lộ tài năng về thể loại tiên huyễn của mình qua tác phẩm Đế Tôn.

Đế Tôn hội tụ đầy đủ các yếu tố mà Linh mỗ thích: pk gay cấn, tu luyện bài bản, tình tiết hài hước hấp dẫn, càng đọc càng phê! Mời các bạn thưởng thức!</string>

</resources>
