<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LO_overview_scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:id="@+id/LO_overview_LL1"
                android:weightSum="10">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/LO_overview_LL1_image1"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:id="@+id/LO_overview_LL1_title"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/story_name"
                        android:gravity="center"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/story_author"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/story_type"
                        android:textSize="14sp"/>

                </LinearLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/LO_overview_LL1_image2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/LO_overview_LL2"
                android:layoutDirection="rtl">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_load_text"
                    android:textSize="16sp"
                    android:id="@+id/LO_overview_LL2_btnload"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_listchap_text"
                    android:textSize="16sp"
                    android:id="@+id/LO_overview_LL2_btnlist"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:id="@+id/LO_overview_LL3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nội Dung"
                    android:textStyle="bold|italic"
                    android:gravity="left"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:id="@+id/LO_overview_LL3_title"/>

                <ExpandableListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LO_overview_LL3_content">

                </ExpandableListView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:id="@+id/LO_overview_LL4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chương Mới Nhất"
                    android:textStyle="bold|italic"
                    android:gravity="left"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:id="@+id/LO_overview_LL4_title"/>
                
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LO_overview_LL4_listchap">


                </ListView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
